[gd_scene load_steps=19 format=3 uid="uid://bnyty5vobw6si"]

[ext_resource type="Script" uid="uid://7h2rok1xosj1" path="res://level/place_for_tower/v1/place_for_tower.gd" id="1_5b8io"]
[ext_resource type="Theme" uid="uid://h1f7iqhh7ycb" path="res://theme/kenneyUI-yellow.tres" id="2_8yj58"]
[ext_resource type="PackedScene" uid="uid://cyja2fwqgai08" path="res://level/tower_card/tower_card.tscn" id="2_f7jdn"]
[ext_resource type="Texture2D" uid="uid://c0foveme6oxjl" path="res://tower/archer_tower/archer_tower.png" id="3_i8p77"]
[ext_resource type="Texture2D" uid="uid://d2omc278toyg2" path="res://tower/electric_tower/electric_tower.png" id="4_4bv7a"]
[ext_resource type="Texture2D" uid="uid://c5lsxj52wm6r8" path="res://tower/tree_tower/tree_tower.png" id="5_i8p77"]
[ext_resource type="Texture2D" uid="uid://b6xq7i4oqgfq1" path="res://tower/art_tower/art_tower.png" id="6_k7vnn"]
[ext_resource type="Texture2D" uid="uid://dh0b3bx6fqn8o" path="res://level/place_for_tower/6379ded93cc6652.png" id="8_wxjlh"]
[ext_resource type="Texture2D" uid="uid://cdsit8ni20ri7" path="res://level/place_for_tower/trashcan2_sptite.png" id="9_3xuer"]
[ext_resource type="Texture2D" uid="uid://b2l0gaf4c68yr" path="res://level/place_for_tower/flag animation-sheet.png" id="10_5b8io"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fvx64"]
radius = 52.0024

[sub_resource type="AtlasTexture" id="AtlasTexture_qs4vb"]
atlas = ExtResource("10_5b8io")
region = Rect2(0, 0, 68, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydtdt"]
atlas = ExtResource("10_5b8io")
region = Rect2(68, 0, 68, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f5vv"]
atlas = ExtResource("10_5b8io")
region = Rect2(136, 0, 68, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eqla"]
atlas = ExtResource("10_5b8io")
region = Rect2(204, 0, 68, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_37smt"]
atlas = ExtResource("10_5b8io")
region = Rect2(136, 0, 68, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tk1m"]
atlas = ExtResource("10_5b8io")
region = Rect2(68, 0, 68, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oougy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs4vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydtdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f5vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eqla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37smt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tk1m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="PlaceForTower" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_5b8io")

[node name="Control" type="Control" parent="."]
unique_name_in_owner = true
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_top = -175.0
offset_bottom = -175.0
theme = ExtResource("2_8yj58")

[node name="MenuPanel" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -111.5
offset_right = 172.0
offset_bottom = 111.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Menu" type="HBoxContainer" parent="Control/MenuPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
metadata/_edit_lock_ = true

[node name="ArcherTowerCard" parent="Control/MenuPanel/MarginContainer/Menu" instance=ExtResource("2_f7jdn")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_i8p77")

[node name="ArtTowerCard" parent="Control/MenuPanel/MarginContainer/Menu" instance=ExtResource("2_f7jdn")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_k7vnn")

[node name="TreeTowerCard" parent="Control/MenuPanel/MarginContainer/Menu" instance=ExtResource("2_f7jdn")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_i8p77")

[node name="ElectricTowerCard" parent="Control/MenuPanel/MarginContainer/Menu" instance=ExtResource("2_f7jdn")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_4bv7a")

[node name="UpdatePanel" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -108.0
offset_right = 152.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/UpdatePanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10

[node name="Update" type="HBoxContainer" parent="Control/UpdatePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="UpdateCard" parent="Control/UpdatePanel/MarginContainer/Update" instance=ExtResource("2_f7jdn")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_wxjlh")

[node name="RemoveCard" parent="Control/UpdatePanel/MarginContainer/Update" instance=ExtResource("2_f7jdn")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("9_3xuer")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fvx64")

[node name="PlaceTexture" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_as_relative = false
y_sort_enabled = true
position = Vector2(2, -5)
scale = Vector2(0.9, 1)
sprite_frames = SubResource("SpriteFrames_oougy")
autoplay = "default"
frame_progress = 0.34988

[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
[connection signal="cardPressed" from="Control/MenuPanel/MarginContainer/Menu/ArcherTowerCard" to="." method="_on_archer_tower_card_card_pressed"]
[connection signal="cardPressed" from="Control/MenuPanel/MarginContainer/Menu/ArtTowerCard" to="." method="_on_art_tower_card_card_pressed"]
[connection signal="cardPressed" from="Control/MenuPanel/MarginContainer/Menu/TreeTowerCard" to="." method="_on_tree_tower_card_card_pressed"]
[connection signal="cardPressed" from="Control/MenuPanel/MarginContainer/Menu/ElectricTowerCard" to="." method="_on_electric_tower_card_card_pressed"]
[connection signal="cardPressed" from="Control/UpdatePanel/MarginContainer/Update/UpdateCard" to="." method="_on_update_card_card_pressed"]
[connection signal="cardPressed" from="Control/UpdatePanel/MarginContainer/Update/RemoveCard" to="." method="_on_remove_card_card_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
